# tinyPiXCore

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  install_manifest.txt
PiXExternUtils/: CMakeLists.txt  CMakePresets.json  Makefile  PiXExternUtils_symlink.cmake  cmake_install.cmake
PiXGUIFramework/desktopGUI/: CMakeLists.txt  CMakePresets.json  Makefile  PiXDesktopGUI_symlink.cmake  cmake_install.cmake
PiXGUIFramework/exampleGUI/: CMakeLists.txt  CMakePresets.json  Makefile  cmake_install.cmake  exampleGUI_symlink.cmake
PiXService/: CMakeLists.txt  Makefile  PiXService_symlink.cmake  cmake_install.cmake
PiXSingleGUI/: CMakeLists.txt  CMakePresets.json  Makefile  PiXSingleGUI_symlink.cmake  cmake_install.cmake
PiXUtils/: CMakeLists.txt  Makefile  PiXUtils_symlink.cmake  cmake_install.cmake
cmake/: CreateTinyCoreSymlink.cmake
examples/ExternUtils/App/: dopack.cpp  dopack.json  install.cpp  readme  remove.cpp  tpDopack  测试安装包.tpk
examples/ExternUtils/Display/: Display  display.cpp  display_get.c
examples/ExternUtils/SystemLib/: Archive  Process  System  archive.cpp  process.cpp  system.cpp
examples/ExternUtils/appManage/: Dopack  Install  dopack.cpp  install.cpp
examples/ExternUtils/bluetooth/: Audio  Bluetooth  Obex  audio.cpp  bluetooth.cpp  obex.cpp
examples/ExternUtils/device/: Usb  usb.cpp
examples/ExternUtils/diskManage/: Disk  cross  main  main.cpp
examples/ExternUtils/media/: Audio  Hard  Record  Video  audio.cpp  hard.cpp  readme  record.cpp  video.cpp
examples/ExternUtils/network/: Network  network.cpp
examples/ExternUtils/other/: Power  power.cpp
examples/SingleGUI/deleteLaterTest/: cross  main.cpp  test
examples/SingleGUI/fixsrceen/: cross  fixscreen  main.cpp
examples/SingleGUI/layout/: cross  layout  main.cpp
examples/SingleGUI/link/: cross  link  main.cpp
examples/SingleGUI/listwidget/: cross  listwidget  main.cpp
examples/SingleGUI/media_test/: cross  dialog  main.cpp
examples/SingleGUI/notificationWidget/: cross  main.cpp  notification
examples/SingleGUI/onoffbutton/: cross  main.cpp  onoff
examples/SingleGUI/picture/: cross  main.cpp  picture
examples/SingleGUI/scroll/: cross  main.cpp  scroll
examples/SingleGUI/scrollbar/: cross  main.cpp  scrollbar
examples/SingleGUI/scrollpanel/: cross  main  main.cpp  scrollpanel
examples/SingleGUI/timer/: cross  main.cpp  timer
examples/SingleGUI/tpAnimation/: animation  cross  main.cpp
examples/SingleGUI/tpBattery/: battery  cross  main.cpp
examples/SingleGUI/tpButton/: button  cross  main.cpp
examples/SingleGUI/tpCarouselButton/: button  main.cpp
examples/SingleGUI/tpCheckBox/: checkbox  cross  main.cpp
examples/SingleGUI/tpCollapsibleFileWidget/: cross  fileWidget  main  main.cpp
examples/SingleGUI/tpComBox/: cross  listComBox  main.cpp
examples/SingleGUI/tpDialog/: cross  dialog  main.cpp
examples/SingleGUI/tpFilePathWidget/: cross  filePathWidget  main.cpp
examples/SingleGUI/tpFlexLayout/: cross  main.cpp
examples/SingleGUI/tpLabel/: cross  label  main.cpp
examples/SingleGUI/tpLine/: cross  line  main.cpp
examples/SingleGUI/tpLineEdit/: cross  lineedit  main.cpp
examples/SingleGUI/tpListCheckBoxGroup/: cross  listCheckBoxGroup  main.cpp
examples/SingleGUI/tpMediaTileButton/: button  main.cpp
examples/SingleGUI/tpMenu/: cross  main.cpp  menu
examples/SingleGUI/tpMenuPanelWidget/: cross  main.cpp  menuPanelWidget
examples/SingleGUI/tpMessgaeBox/: cross  main.cpp  tpMessgaeBox
examples/SingleGUI/tpPercentProgressBar/: cross  main.cpp  progressBar
examples/SingleGUI/tpProgressBar/: cross  main.cpp  progress
examples/SingleGUI/tpRadioButton/: cross  main.cpp  radiobutton
examples/SingleGUI/tpSlider/: cross  main.cpp  slider
examples/SingleGUI/tpTabWidget/: cross  main.cpp  tabWidget
examples/SingleGUI/tpVirtualKeyboard/: cross  main.cpp  virtualKeyboard
examples/SingleGUI/treewidget/: cross  main.cpp  treewidget
examples/Utils/clipboard/: cross1  cross2  main1.cpp  main2.cpp  test1  test2
examples/Utils/common/: cross  main.cpp  test
examples/Utils/cssParser/: cross  cssParser  main  main.cpp  test.css
examples/Utils/fileDirTest/: cross  fileTest  main.cpp  test.txt  testFile
examples/Utils/jsonParser/: cross  jsonParser  main.cpp
examples/Utils/network/: cross
examples/Utils/tpDateTime/: cross  dateTime  main  main.cpp
examples/Utils/tpGateway/: client1  client1Main  client1Main.cpp  client2  client2Main.cpp  cross
examples/Utils/tpInputMethod/: cross  inputMethod  main.cpp
examples/Utils/tpProcess/: cross  main.cpp  process
examples/Utils/tpSignalslot/: cross  main.cpp
examples/Utils/tpString/: cross  main.cpp  tpString
examples/Utils/tpThreadPool/: cross  main.cpp
examples/Utils/variant/: cross  main.cpp  variant
examplesApp/: CMakeLists.txt  CMakePresets.json
examplesApp/data/: style.css
examplesApp/src/: examplesAppGlobal.h  main.cpp  mainWindowService.cpp  mainWindowService.h  testLight.cpp  testLight.h
install/: dopack.sh
install/config/: alsa_config.sh
src/: SQLite3Gen.sh
src/data/SystemTheme/: purple-light.css  test.css
src/data/rime/: default.yaml  luna_pinyin.schema.yaml  rime_api_console  rime_console  rime_deployer  rime_dict_manager  rime_patch  user.yaml
src/include/: tpDesktopGlobal.h  tpGlobal.h
src/include/ExternUtils/: tpAppDataDisk.h  tpAppDopack.h  tpAppInstall.h  tpAudioInterface.h  tpBluetoothAddress.h  tpBluetoothAudioDevice.h  tpBluetoothAudioManager.h  tpBluetoothDevice.h  tpBluetoothDiscovery.h  tpBluetoothLocal.h  tpBluetoothSocket.h  tpBluetoothTransfer.h  tpBluetoothTransferAgent.h  tpCompress.h  tpCpu.h  tpCpuManage.h  tpDisk.h  tpDiskManage.h  tpDisplay.h  tpDisplayManage.h  tpGpu.h  tpLibDopack.h  tpLogin.h  tpMediaFile.h  tpMediaInterface.h  tpMemory.h  tpNetworkDatagram.h  tpNetworkInfo.h  tpNetworkInterface.h  tpNetworkManage.h  tpProcessInfo.h  tpProcessManage.h  tpRecordInterface.h  tpSocket.h  tpSound.h  tpSystemBatteryInfo.h  tpSystemInfo.h  tpTcpServer.h  tpTcpSocket.h  (+6 more)
(+487 files in other folders)
